--- a/index.html
+++ b/index.html
@@ -32,41 +32,32 @@
     </header>
     <section class="main-body">
       <div class="main-product-info">
-
-<div class="slider-for">
-  <div><img src="https://i.imgur.com/Iyy2jVQ.jpg" alt=""></div>
-  <div><img src="https://i.imgur.com/QsZs2Uf.jpg" alt=""></div>
-  <div><img src="https://i.imgur.com/gbQfOnC.jpg" alt=""></div>
-</div>
-
-
-<div class="slider-nav">
-  <div class="single-slide"><img src="https://i.imgur.com/Iyy2jVQ.jpg" alt=""></div>
-  <div class="single-slide"><img src="https://i.imgur.com/QsZs2Uf.jpg" alt=""></div>
-  <div class="single-slide"><img src="https://i.imgur.com/gbQfOnC.jpg" alt=""></div>
-</div>
-
-<div class="title-price">
-        <h4>Tiger Shirt Michael Kots</h4>
-        <p>AED 250</p>
+      <div><img src="https://i.imgur.com/Iyy2jVQ.jpg" alt="" data-smallPicture></div>
+        <div class="title-price">
+        <h4><span data-productTitle>Tiger Shirt Michael Kots</span> <br />
+              <small> by <span data-brand>Miechael Kors</span></small></h4>
+        <p><span data-currency>AED</span> <span data-price>250</span></p>
 </div>
 
       </div>
 
 
 
-      <div class="sizes"><p>Available Sizes: <span>S, M, L</span></p></div>
-      <div class="colors">
+      <div class="sizes">
+        <p>
+          Available Sizes: <span data-availSize>S, M, L</span><br />
+          Neck type: <span data-sleevType>Y Collar</span>
+      </p>
+    </div>
+
+      <div class="colors" data-buttons>
         <p>Available Colors</p>
-        <button class="red"></button>
-        <button class="black"></button>
-        <button class="grey"></button>
       </div>
       <button class="a2c">Add to cart</button>
       <div class="description">
         <h5>Product description</h5>
-        <p>
-         It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English.
+        <p data-descreption>
+         It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
         </p>
       </div>
 
@@ -74,16 +65,16 @@
 
       <div class="related-products section group">
         <div class="col span_1_of_4">
-        <img src="http://placehold.it/200x200" alt="">
+        <img src="https://i.imgur.com/6s7TCGu.jpg" alt="" data-thumb1>
         </div>
         <div class="col span_1_of_4">
-        <img src="http://placehold.it/200x200" alt="">
+        <img src="https://i.imgur.com/JZUsesm.jpg" alt="" data-thumb2>
         </div>
         <div class="col span_1_of_4">
-        <img src="http://placehold.it/200x200" alt="">
+        <img src="https://i.imgur.com/EBeCFad.jpg" alt="" data-thumb3>
         </div>
         <div class="col span_1_of_4">
-        <img src="http://placehold.it/200x200" alt="">
+        <img src="https://i.imgur.com/ZVjfS2b.jpg" alt="" data-thumb4>
         </div>
       </div>
 
